refactor(cluster): ♻️ 重构集群服务层架构规范
重构集群信息服务实现类，使用DTO模式进行数据传输
- 引入ClusterInfoConverter进行实体与DTO/VO转换
- 继承ServiceImpl简化基础CRUD操作
- 修改Controller层返回Result<VO>格式
- 新增ClusterInfoDTO和ClusterInfoVO数据载体
- 统一异常处理规范

Resolves: #123
Signed-off-by: 任相鹏 <renxiangpeng@norinaviation.com>